# LINNE

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
evaluation/: codec_comaprison_summery.csv  codec_comparison_summery.csv  evaluate_codecs.py  plot_performance_graph.py  plot_total_performance_graph.py  split_wav.py
include/: linne.h  linne_decoder.h  linne_encoder.h  linne_stdint.h
libs/: CMakeLists.txt
libs/bit_stream/include/: bit_stream.h
libs/bit_stream/src/: bit_stream.c
libs/linne_coder/: CMakeLists.txt
libs/linne_coder/include/: linne_coder.h
libs/linne_coder/src/: CMakeLists.txt  linne_coder.c
libs/linne_decoder/: CMakeLists.txt
libs/linne_decoder/src/: CMakeLists.txt  linne_decoder.c  linne_lpc_synthesize.c  linne_lpc_synthesize.h
libs/linne_encoder/: CMakeLists.txt
libs/linne_encoder/src/: CMakeLists.txt  linne_encoder.c  linne_lpc_predict.c  linne_lpc_predict.h
libs/linne_internal/: CMakeLists.txt
libs/linne_internal/include/: .linne_internal.h.swp  linne_internal.h  linne_utility.h
libs/linne_internal/src/: CMakeLists.txt  linne_internal.c  linne_utility.c
libs/linne_network/: CMakeLists.txt
libs/linne_network/include/: linne_network.h
libs/linne_network/src/: CMakeLists.txt  linne_network.c
libs/lpc/include/: lpc.h
libs/lpc/src/: lpc.c
libs/lpcnet/: CMakeLists.txt
libs/lpcnet/include/: lpcnet.h
libs/lpcnet/src/: .lpcnet.c.swp  CMakeLists.txt  lpcnet.c
libs/static_huffman/include/: static_huffman.h
libs/static_huffman/src/: static_huffman.c
libs/wav/src/: wav.c
test/: CMakeLists.txt
test/bit_stream/: CMakeLists.txt  main.cpp
test/linne_coder/: CMakeLists.txt  main.cpp
test/linne_decoder/: CMakeLists.txt  linne_decoder_test.cpp  linne_lpc_synthesize_test.cpp  main.cpp
test/linne_encode_decode/: CMakeLists.txt  main.cpp
test/linne_encoder/: CMakeLists.txt  linne_encoder_test.cpp  linne_lpc_predict_test.cpp  main.cpp
test/linne_internal/: CMakeLists.txt  main.cpp
test/linne_network/: CMakeLists.txt  main.cpp
test/lpc/: main.cpp
test/static_huffman/: main.cpp
tools/linne_codec/: CMakeLists.txt  linne_codec.c
(+6 files in other folders)
